--- a/productdetails/style.css
+++ b/productdetails/style.css
@@ -526,8 +526,257 @@ nav{
 
 
 
+/* specifications starts here */
 
-/*  */
+.list{
+    display: flex;
+    gap: 80px;
+    justify-content: space-around;
+    margin-top: 100px;
+
+}
+
+.list{
+    color: #474545;
+}
+
+#speci{
+    height: 25px;
+    width: 100px;
+    color: white;
+    background-color: red;
+    border: 1px solid red;
+    border-radius: 5px;
+    margin-left: 30px;
+    
+
+}
+
+.types{
+    display: flex;
+    margin-left: 100px;
+}
+
+.types ul:last-child{
+    text-align: end;
+}
+
+.types .lists{
+    color:  rgb(217, 202, 202);
+
+}
+
+.lists li{
+  margin: 20px 0px;
+}
+
+
+
+
+.top-products-cards {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 40px;
+}
+
+.top-product {
+    display: flex;
+    flex-direction: column;
+    width: 300px;
+    height: 550px;
+    border: 1px solid grey;
+    padding: 40px 20px;
+    box-sizing: border-box;
+}
+
+.desc{
+    color: white;
+}
+
+.desc .rating i{
+    color: red;
+}
+
+.desc span{
+    font-size: x-large;
+}
+.desc strike{
+    font-size: larger;
+    color: grey;
+}
+
+.desc button{
+  height: 40px;
+  width: 250px;
+  background-color: red;
+  color: whitesmoke;
+  border: 1px solid red;
+
+}
+
+.top-product img{
+    height: 280px;
+}
+
+.theory {
+    color: white;
+    display: flex;
+    justify-content: center;
+    margin: 100px;
+}
+
+
+
+.carousel-indicators [data-bs-target] {
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  border: none;
+  background-color: #3f3e3e;
+  opacity: 0.5;
+  margin: 30px 5px ;
+}
+
+
+.carousel-indicators {
+  display: flex;
+  justify-content: center;
+}
+
+.carousel-indicators button:first-child{
+    background-color: red;
+}
+
+
+/* specification ends here */
+
+
+
+/* specifications starts here */
+
+.list{
+    display: flex;
+    gap: 80px;
+    justify-content: space-around;
+    margin-top: 100px;
+
+}
+
+.list{
+    color: #474545;
+}
+
+#specif{
+    height: 25px;
+    width: 100px;
+    color: white;
+    background-color: red;
+    border: 1px solid red;
+    border-radius: 5px;
+    margin-left: 30px;
+    
+
+}
+
+.types{
+    display: flex;
+    margin-left: 100px;
+}
+
+.types ul:last-child{
+    text-align: end;
+}
+
+.types .lists{
+    color:  rgb(217, 202, 202);
+
+}
+
+.lists li{
+  margin: 20px 0px;
+}
+
+
+
+
+.top-products-cards {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 40px;
+}
+
+.top-product {
+    display: flex;
+    flex-direction: column;
+    width: 300px;
+    height: 550px;
+    border: 1px solid grey;
+    padding: 40px 20px;
+    box-sizing: border-box;
+}
+
+.desc{
+    color: white;
+}
+
+.desc .rating i{
+    color: red;
+}
+
+.desc span{
+    font-size: x-large;
+}
+.desc strike{
+    font-size: larger;
+    color: grey;
+}
+
+.desc button{
+  height: 40px;
+  width: 250px;
+  background-color: red;
+  color: whitesmoke;
+  border: 1px solid red;
+
+}
+
+.top-product img{
+    height: 280px;
+}
+
+.theory {
+    color: white;
+    display: flex;
+    justify-content: center;
+    margin: 100px;
+}
+
+
+
+.carousel-indicators [data-bs-target] {
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  border: none;
+  background-color: #3f3e3e;
+  opacity: 0.5;
+  margin: 30px 5px ;
+}
+
+
+.carousel-indicators {
+  display: flex;
+  justify-content: center;
+}
+
+.carousel-indicators button:first-child{
+    background-color: red;
+}
+
+
+/* specification ends here */
+
+
 
 .advantages{
   margin-bottom: 70px;
@@ -569,11 +818,6 @@ nav{
   display: flex;
   justify-content: center;
 }
-
-
-/*  */
-
-
 
 /* footer starts here */
 
